fixed links positions on mobile navbar

--- a/index.scss
+++ b/index.scss
@@ -151,17 +151,17 @@ iframe {
       .link {
         transition: opacity 0s 0s;
         &.main {
-          bottom: 86%;
+          bottom: 85.4%;
           a {
             position: absolute;
             margin-left: 0;
             left: 0;
-            top: 16.4vh;
+            top: 15.2vh;
             white-space: nowrap;
           }
         }
         &.digital {
-          bottom: 54.5%;
+          bottom: 54%;
         }
         &.institute {
           bottom: 39.3%;
